# Solitaire

./: .gitignore  CMakeLists.txt  Gigathon.kdev4  Makefile  Pasjans  Solitaire.kdev4
src/: CMakeLists.txt  exceptions.cpp  exceptions.h  gigathon.cpp  gigathon.h  gigathon.json  main.cpp
src/cards/: tcard.cpp  tcard.h  tdeck.cpp  tdeck.h  tshufler.cpp  tshufler.h
src/dealers/: tdealer.cpp  tdealer.h  tsolitare_dealer.cpp  tsolitare_dealer.h
src/environmment/: tboard.cpp  tboard.h
src/factories/: tboard_factory.cpp  tboard_factory.h
src/stacks/: tcard_stack.cpp  tcard_stack.h  tend_stack.cpp  tend_stack.h  tmiddle_stack.cpp  tmiddle_stack.h  treserve_stack.cpp  treserve_stack.h
src/system/: .tplayer.cpp.kate-swp  tcolorer.h  tdrawer.cpp  tdrawer.h  tjudge.cpp  tjudge.h  tmenu.cpp  tmenu.h  tplayer.cpp  tplayer.h  tsaver.cpp  tsaver.h
